--- a/bisca-ui/gameplay.html
+++ b/bisca-ui/gameplay.html
@@ -23,8 +23,8 @@
 <!-- Angular2 files -->
 <script src="/build/vendor.js"></script>
 <!-- App script -->
-<script src="/build/models/PlayerBoard.js"></script>
-<script src="/build/models/PlayerStatus.js"></script>
-<script src="/build/services/PlayerService.js"></script>
+<script src="/build/models/player.board.js"></script>
+<script src="/build/models/player.status.js"></script>
+<script src="/build/services/player.service.js"></script>
 <script src="/build/app.game.js"></script>
 </html>
