--- a/bisca-ui/app/login/login.html
+++ b/bisca-ui/app/login/login.html
@@ -1,15 +1,18 @@
 <div class="login jumbotron center-block">
-  <h1>Login</h1>
-  <form role="form" (submit)="login($event, username.value, password.value)">
-  <div class="form-group">
-    <label for="username">Username</label>
-    <input type="text" #username class="form-control" id="username" placeholder="Username">
-  </div>
-  <div class="form-group">
-    <label for="password">Password</label>
-    <input type="password" #password class="form-control" id="password" placeholder="Password">
-  </div>
-  <button type="submit" class="btn btn-default">Submit</button>
-    <a href="/signup">Click here to Signup</a>
-</form>
+    <h1>Login</h1>
+    <form role="form" (submit)="login($event, username.value, password.value)">
+        <div class="form-group">
+            <label for="username">Username</label>
+            <input type="text" #username class="form-control" id="username" placeholder="Username">
+        </div>
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" #password class="form-control" id="password" placeholder="Password">
+        </div>
+        <div>
+            <button type="submit" md-raised-button color="primary">Submit</button>
+            <button style="float:right" md-raised-button color="primary" (click)="signup($event)">Click here to Signup
+            </button>
+        </div>
+    </form>
 </div>
