--- a/bisca-ui/index.html
+++ b/bisca-ui/index.html
@@ -1,32 +1,30 @@
 <!DOCTYPE html>
 <html lang="">
 <head>
-  <title>Angular2 demo by @Auth0</title>
+    <title>Angular2 demo by @Auth0</title>
 
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <base href="/">
-  <!-- styles -->
-  <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.css">
-  <!-- Util -->
-  <script type="text/javascript" src="/node_modules/jwt-decode/build/jwt-decode.js"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <base href="/">
+    <script src="/node_modules/@angular2-material/button/button.js"></script>
+    <!-- styles -->
+    <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="/node_modules/@angular2-material/button/button.css">
+    <!-- Util -->
+    <script type="text/javascript" src="/node_modules/jwt-decode/build/jwt-decode.js"></script>
 </head>
 <body>
-  <my-app>Loading...</my-app>
+<my-app>Loading...</my-app>
 
-  <auth-app>
+<auth-app>
     Loading...
-  </auth-app>
+</auth-app>
 
-  <!-- Commmon files to be cached -->
-  <script src="/build/common.js"></script>
-  <!-- Angular2 files -->
-  <script src="/build/vendor.js"></script>
-  <!-- App script -->
-  <script src="/build/app.component.js"></script>
-  <script src="/build/app.js"></script>
+<script src="/build/common.js"></script>
+<script src="/build/vendor.js"></script>
+<script src="/build/app.component.js"></script>
+<script src="/build/app.js"></script>
 </body>
 </html>
