SZ-N One page webapp site

--- a/bisca-ui/index.html
+++ b/bisca-ui/index.html
@@ -26,5 +26,9 @@
 <script src="/build/vendor.js"></script>
 <script src="/build/app.component.js"></script>
 <script src="/build/app.js"></script>
+<script src="/build/models/player.board.js"></script>
+<script src="/build/models/player.status.js"></script>
+<script src="/build/services/player.service.js"></script>
+<script src="/build/app.game.js"></script>
 </body>
 </html>
