SZ-N Adds Angular2 Board

--- a/bisca-ui/index.html
+++ b/bisca-ui/index.html
@@ -16,11 +16,9 @@
     <script type="text/javascript" src="/node_modules/jwt-decode/build/jwt-decode.js"></script>
 </head>
 <body>
-<my-app>Loading...</my-app>
+<bisca-je-header>Loading...</bisca-je-header>
 
-<auth-app>
-    Loading...
-</auth-app>
+<bisca-je-content>Loading...</bisca-je-content>
 
 <script src="/build/common.js"></script>
 <script src="/build/vendor.js"></script>
