--- a/bisca-ui/index.html
+++ b/bisca-ui/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="/">
-    <script src="/node_modules/@angular2-material/button/button.js"></script>
+    <!--<script src="/node_modules/@angular2-material/button/button.js"></script>-->
     <!-- styles -->
     <link rel="stylesheet" type="text/css" href="/node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="/node_modules/@angular2-material/button/button.css">
@@ -20,13 +20,7 @@
 
 <bisca-je-content>Loading...</bisca-je-content>
 
-<script src="/build/common.js"></script>
 <script src="/build/vendor.js"></script>
-<script src="/build/app.component.js"></script>
 <script src="/build/app.js"></script>
-<script src="/build/models/player.board.js"></script>
-<script src="/build/models/player.status.js"></script>
-<script src="/build/services/player.service.js"></script>
-<script src="/build/app.game.js"></script>
 </body>
 </html>
