SZ-N Using NG-Materials

--- a/bisca-ui/app/home/home.html
+++ b/bisca-ui/app/home/home.html
@@ -1,11 +1,11 @@
 <div>
-    <div class="home jumbotron centered">
+    <div class="home centered">
         <h1>Game Board</h1>
     </div>
-    <div class="home jumbotron centered">
+    <div class="home centered">
         <h1>Welcome player!</h1>
     </div>
-    <div class="home jumbotron centered">
+    <div class="home centered">
         <p><a md-raised-button color="primary" role="button" (click)="logout()">Logout</a></p>
     </div>
 </div>
