--- a/bisca-ui/app/login/login.html
+++ b/bisca-ui/app/login/login.html
@@ -2,8 +2,12 @@
     <h1>Login</h1>
     <form role="form" (submit)="login($event, username.value, password.value)">
         <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" #username class="form-control" id="username" placeholder="Username">
+            <!--<label for="username">Username</label>-->
+            <md-input placeholder="Username" align="end">
+                <span md-prefix>>&nbsp;</span>
+                <span md-suffix>Your user name here</span>
+            </md-input>
+            <!--<input type="text" #username class="form-control" id="username" placeholder="Username">-->
         </div>
         <div class="form-group">
             <label for="password">Password</label>
