--- a/bisca-ui/index.html
+++ b/bisca-ui/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="">
 <head>
-    <title>Angular2 demo by @Auth0</title>
+    <title>Bisca JE</title>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <base href="/">
     <!-- Util -->
+    <script>
+      System.import('app').catch(function(err){ console.error(err); });
+    </script>
     <script type="text/javascript" src="/node_modules/jwt-decode/build/jwt-decode.js"></script>
 </head>
 <body>
