--- a/bisca-ui/app/login/app.html
+++ b/bisca-ui/app/login/app.html
@@ -1,3 +1,7 @@
 <div class="container">
+  <nav>
+    <a routerLink="/dashboard">login</a>
+    <a routerLink="/heroes">home</a>
+  </nav>
   <router-outlet></router-outlet>
 </div>
