--- a/bisca-ui/index.html
+++ b/bisca-ui/index.html
@@ -1,3 +1,4 @@
+<html>
 <head>
     <meta charset="UTF-8">
     <title>My Angular 2 App!</title>
@@ -17,6 +18,8 @@
     <script>
         System.import('app').catch(function(err) { console.error(err); });
     </script>
-
-    <p align='center'>This is how I do it!</p>
-</head>
+  </head>
+<body>
+    <bisca-title>Loading...</bisca-title>
+</body>
+</html>
